// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapHardCodedCategories all old node subjects (nb locale) 1`] = `
Array [
  Object {
    "name": "fellesfag",
    "subjects": Array [
      Object {
        "id": "42",
        "lang": "en",
        "name": "Engelsk",
        "nodeId": "42",
        "text": "Engelsk",
        "url": "/en/node/42",
      },
      Object {
        "id": "urn:subject:9",
        "name": "Historie Vg2 og Vg3",
        "nodeId": "52253",
        "text": "Historie Vg2 og Vg3",
        "url": "/subjects/subject:9",
      },
      Object {
        "id": "46",
        "name": "Kroppsøving",
        "nodeId": "46",
        "text": "Kroppsøving",
        "url": "/nb/node/46",
      },
      Object {
        "id": "urn:subject:34",
        "name": "Matematikk 1P",
        "nodeId": "55",
        "text": "Matematikk 1P",
        "url": "/subjects/subject:34",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 1P-Y",
        "text": "Matematikk 1P-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "urn:subject:33",
        "name": "Matematikk 1T",
        "nodeId": "54",
        "text": "Matematikk 1T",
        "url": "/subjects/subject:33",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 1T-Y",
        "text": "Matematikk 1T-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "urn:subject:29",
        "name": "Matematikk 2P",
        "nodeId": "53",
        "text": "Matematikk 2P",
        "url": "/subjects/subject:29",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 2P-Y",
        "text": "Matematikk 2P-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "7",
        "name": "Naturfag",
        "nodeId": "7",
        "text": "Naturfag",
        "url": "/nb/node/7",
      },
      Object {
        "id": "27",
        "name": "Norsk Vg2 og Vg3 SF",
        "nodeId": "27",
        "text": "Norsk Vg2 og Vg3 SF",
        "url": "/nb/node/27",
      },
      Object {
        "id": "116784",
        "name": "Norsk YF og SF",
        "nodeId": "116784",
        "text": "Norsk YF og SF",
        "url": "/nb/node/116784",
      },
      Object {
        "beta": true,
        "id": "185100",
        "name": "Religion og etikk",
        "nodeId": "185100",
        "text": "Religion og etikk",
        "url": "/nb/node/185100",
      },
      Object {
        "id": "urn:subject:3",
        "name": "Samfunnsfag",
        "nodeId": "36",
        "text": "Samfunnsfag",
        "url": "/subjects/subject:3",
      },
      Object {
        "beta": true,
        "id": "126960",
        "name": "Sørsamisk som førstespråk",
        "nodeId": "126960",
        "text": "Sørsamisk som førstespråk",
        "url": "/nb/node/126960",
      },
    ],
  },
  Object {
    "name": "yrkesfag",
    "subjects": Array [
      Object {
        "id": "51",
        "name": "Barne- og ungdomsarbeiderfag Vg2",
        "nodeId": "51",
        "text": "Barne- og ungdomsarbeiderfag Vg2",
        "url": "/nb/node/51",
      },
      Object {
        "id": "urn:subject:6",
        "name": "Brønnteknikk",
        "nodeId": "137414",
        "text": "Brønnteknikk",
        "url": "/subjects/subject:6",
      },
      Object {
        "id": "127013",
        "name": "Bygg- og anleggsteknikk Vg1",
        "nodeId": "127013",
        "text": "Bygg- og anleggsteknikk Vg1",
        "url": "/nb/node/127013",
      },
      Object {
        "id": "44",
        "name": "Design og håndverk Vg1",
        "nodeId": "44",
        "text": "Design og håndverk Vg1",
        "url": "/nb/node/44",
      },
      Object {
        "id": "43",
        "name": "Elektrofag Vg1",
        "nodeId": "43",
        "text": "Elektrofag Vg1",
        "url": "/nb/node/43",
      },
      Object {
        "id": "urn:subject:24",
        "name": "Helse- og oppvekstfag Vg1",
        "nodeId": "8",
        "text": "Helse- og oppvekstfag Vg1",
        "url": "/subjects/subject:24",
      },
      Object {
        "id": "urn:subject:4",
        "name": "Helsearbeiderfag Vg2",
        "nodeId": "52",
        "text": "Helsearbeiderfag Vg2",
        "url": "/subjects/subject:4",
      },
      Object {
        "id": "urn:subject:25",
        "name": "IKT-servicefag Vg2",
        "nodeId": "102783",
        "text": "IKT-servicefag Vg2",
        "url": "/subjects/subject:25",
      },
      Object {
        "id": "86643",
        "name": "Kokk- og servitørfag Vg2",
        "nodeId": "86643",
        "text": "Kokk- og servitørfag Vg2",
        "url": "/nb/node/86643",
      },
      Object {
        "id": "137415",
        "name": "Naturbruk Vg1",
        "nodeId": "137415",
        "text": "Naturbruk Vg1",
        "url": "/nb/node/137415",
      },
      Object {
        "id": "102780",
        "name": "Reiseliv Vg2",
        "nodeId": "102780",
        "text": "Reiseliv Vg2",
        "url": "/nb/node/102780",
      },
      Object {
        "id": "37",
        "name": "Restaurant- og matfag Vg1",
        "nodeId": "37",
        "text": "Restaurant- og matfag Vg1",
        "url": "/nb/node/37",
      },
      Object {
        "id": "2600",
        "name": "Romteknologi Vg3",
        "nodeId": "2600",
        "text": "Romteknologi Vg3",
        "url": "/nb/node/2600",
      },
      Object {
        "id": "urn:subject:22",
        "name": "Salg, service og sikkerhet Vg2",
        "nodeId": "102781",
        "text": "Salg, service og sikkerhet Vg2",
        "url": "/subjects/subject:22",
      },
      Object {
        "id": "urn:subject:12",
        "name": "Service og samferdsel Vg1",
        "nodeId": "52291",
        "text": "Service og samferdsel Vg1",
        "url": "/subjects/subject:12",
      },
      Object {
        "id": "35",
        "name": "Teknikk og industriell produksjon Vg1",
        "nodeId": "35",
        "text": "Teknikk og industriell produksjon Vg1",
        "url": "/nb/node/35",
      },
      Object {
        "id": "102782",
        "name": "Transport og logistikk Vg2",
        "nodeId": "102782",
        "text": "Transport og logistikk Vg2",
        "url": "/nb/node/102782",
      },
    ],
  },
  Object {
    "name": "studiespesialiserende",
    "subjects": Array [
      Object {
        "id": "52234",
        "name": "Biologi 1",
        "nodeId": "52234",
        "text": "Biologi 1",
        "url": "/nb/node/52234",
      },
      Object {
        "id": "urn:subject:17",
        "lang": "en",
        "name": "Engelskspråklig litteratur og kultur",
        "nodeId": "71085",
        "text": "Engelskspråklig litteratur og kultur",
        "url": "/subjects/subject:17",
      },
      Object {
        "id": "urn:subject:27",
        "lang": "en",
        "name": "Internasjonal engelsk",
        "nodeId": "56850",
        "text": "Internasjonal engelsk",
        "url": "/subjects/subject:27",
      },
      Object {
        "id": "urn:subject:2",
        "name": "Kinesisk 1",
        "nodeId": "127756",
        "text": "Kinesisk 1",
        "url": "/subjects/subject:2",
      },
      Object {
        "id": "urn:subject:2",
        "name": "Kinesisk 2",
        "nodeId": "138654",
        "text": "Kinesisk 2",
        "url": "/subjects/subject:2",
      },
      Object {
        "id": "6118",
        "name": "Kommunikasjon og kultur 1",
        "nodeId": "6118",
        "text": "Kommunikasjon og kultur 1",
        "url": "/nb/node/6118",
      },
      Object {
        "id": "2602",
        "name": "Kommunikasjon og kultur 2",
        "nodeId": "2602",
        "text": "Kommunikasjon og kultur 2",
        "url": "/nb/node/2602",
      },
      Object {
        "id": "2603",
        "name": "Kommunikasjon og kultur 3",
        "nodeId": "2603",
        "text": "Kommunikasjon og kultur 3",
        "url": "/nb/node/2603",
      },
      Object {
        "id": "urn:subject:7",
        "name": "Markedsføring og ledelse 1",
        "nodeId": "52293",
        "text": "Markedsføring og ledelse 1",
        "url": "/subjects/subject:7",
      },
      Object {
        "id": "urn:subject:32",
        "name": "Matematikk R1",
        "nodeId": "57933",
        "text": "Matematikk R1",
        "url": "/subjects/subject:32",
      },
      Object {
        "id": "urn:subject:32",
        "name": "Matematikk R2",
        "nodeId": "98361",
        "text": "Matematikk R2",
        "url": "/subjects/subject:32",
      },
      Object {
        "id": "urn:subject:31",
        "name": "Matematikk S1",
        "nodeId": "57934",
        "text": "Matematikk S1",
        "url": "/subjects/subject:31",
      },
      Object {
        "id": "urn:subject:31",
        "name": "Matematikk S2",
        "nodeId": "98366",
        "text": "Matematikk S2",
        "url": "/subjects/subject:31",
      },
      Object {
        "id": "urn:subject:14",
        "name": "Medie- og informasjonskunnskap",
        "text": "Medie- og informasjonskunnskap",
        "url": "/subjects/subject:14",
      },
      Object {
        "beta": true,
        "id": "urn:subject:1",
        "name": "Medieuttrykk og mediesamfunnet",
        "nodeId": "156500",
        "text": "Medieuttrykk og mediesamfunnet",
        "url": "/subjects/subject:1",
      },
      Object {
        "id": "urn:subject:23",
        "lang": "en",
        "name": "Samfunnsfaglig engelsk",
        "nodeId": "71082",
        "text": "Samfunnsfaglig engelsk",
        "url": "/subjects/subject:23",
      },
      Object {
        "beta": true,
        "id": "185103",
        "name": "Sosiologi og sosialantropologi",
        "nodeId": "185103",
        "text": "Sosiologi og sosialantropologi",
        "url": "/nb/node/185103",
      },
      Object {
        "id": "urn:subject:8",
        "name": "Tysk 1",
        "nodeId": "137416",
        "text": "Tysk 1",
        "url": "/subjects/subject:8",
      },
      Object {
        "id": "urn:subject:8",
        "name": "Tysk 2",
        "nodeId": "138655",
        "text": "Tysk 2",
        "url": "/subjects/subject:8",
      },
    ],
  },
]
`;

exports[`mapHardCodedCategories with a vocational subjects replaced 1`] = `
Array [
  Object {
    "name": "fellesfag",
    "subjects": Array [
      Object {
        "id": "42",
        "lang": "en",
        "name": "Engelsk",
        "nodeId": "42",
        "text": "Engelsk",
        "url": "/en/node/42",
      },
      Object {
        "id": "urn:subject:9",
        "name": "Historie Vg2 og Vg3",
        "nodeId": "52253",
        "text": "Historie Vg2 og Vg3",
        "url": "/subjects/subject:9",
      },
      Object {
        "id": "46",
        "name": "Kroppsøving",
        "nodeId": "46",
        "text": "Kroppsøving",
        "url": "/nb/node/46",
      },
      Object {
        "id": "urn:subject:34",
        "name": "Matematikk 1P",
        "nodeId": "55",
        "text": "Matematikk 1P",
        "url": "/subjects/subject:34",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 1P-Y",
        "text": "Matematikk 1P-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "urn:subject:33",
        "name": "Matematikk 1T",
        "nodeId": "54",
        "text": "Matematikk 1T",
        "url": "/subjects/subject:33",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 1T-Y",
        "text": "Matematikk 1T-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "urn:subject:29",
        "name": "Matematikk 2P",
        "nodeId": "53",
        "text": "Matematikk 2P",
        "url": "/subjects/subject:29",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 2P-Y",
        "text": "Matematikk 2P-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "7",
        "name": "Naturfag",
        "nodeId": "7",
        "text": "Naturfag",
        "url": "/nb/node/7",
      },
      Object {
        "id": "27",
        "name": "Norsk Vg2 og Vg3 SF",
        "nodeId": "27",
        "text": "Norsk Vg2 og Vg3 SF",
        "url": "/nb/node/27",
      },
      Object {
        "id": "116784",
        "name": "Norsk YF og SF",
        "nodeId": "116784",
        "text": "Norsk YF og SF",
        "url": "/nb/node/116784",
      },
      Object {
        "beta": true,
        "id": "185100",
        "name": "Religion og etikk",
        "nodeId": "185100",
        "text": "Religion og etikk",
        "url": "/nb/node/185100",
      },
      Object {
        "id": "urn:subject:3",
        "name": "Samfunnsfag",
        "nodeId": "36",
        "text": "Samfunnsfag",
        "url": "/subjects/subject:3",
      },
      Object {
        "beta": true,
        "id": "126960",
        "name": "Sørsamisk som førstespråk",
        "nodeId": "126960",
        "text": "Sørsamisk som førstespråk",
        "url": "/nb/node/126960",
      },
    ],
  },
  Object {
    "name": "yrkesfag",
    "subjects": Array [
      Object {
        "id": "51",
        "name": "Barne- og ungdomsarbeiderfag Vg2",
        "nodeId": "51",
        "text": "Barne- og ungdomsarbeiderfag Vg2",
        "url": "/nb/node/51",
      },
      Object {
        "id": "urn:subject:6",
        "name": "Brønnteknikk",
        "nodeId": "137414",
        "text": "Brønnteknikk",
        "url": "/subjects/subject:6",
      },
      Object {
        "id": "127013",
        "name": "Bygg- og anleggsteknikk Vg1",
        "nodeId": "127013",
        "text": "Bygg- og anleggsteknikk Vg1",
        "url": "/nb/node/127013",
      },
      Object {
        "id": "44",
        "name": "Design og håndverk Vg1",
        "nodeId": "44",
        "text": "Design og håndverk Vg1",
        "url": "/nb/node/44",
      },
      Object {
        "id": "43",
        "name": "Elektrofag Vg1",
        "nodeId": "43",
        "text": "Elektrofag Vg1",
        "url": "/nb/node/43",
      },
      Object {
        "id": "urn:subject:24",
        "name": "Helse- og oppvekstfag Vg1",
        "nodeId": "8",
        "text": "Helse- og oppvekstfag Vg1",
        "url": "/subjects/subject:24",
      },
      Object {
        "id": "urn:subject:4",
        "name": "Helsearbeiderfag Vg2",
        "nodeId": "52",
        "text": "Helsearbeiderfag Vg2",
        "url": "/subjects/subject:4",
      },
      Object {
        "id": "urn:subject:25",
        "name": "IKT-servicefag Vg2",
        "nodeId": "102783",
        "text": "IKT-servicefag Vg2",
        "url": "/subjects/subject:25",
      },
      Object {
        "id": "86643",
        "name": "Kokk- og servitørfag Vg2",
        "nodeId": "86643",
        "text": "Kokk- og servitørfag Vg2",
        "url": "/nb/node/86643",
      },
      Object {
        "id": "137415",
        "name": "Naturbruk Vg1",
        "nodeId": "137415",
        "text": "Naturbruk Vg1",
        "url": "/nb/node/137415",
      },
      Object {
        "id": "102780",
        "name": "Reiseliv Vg2",
        "nodeId": "102780",
        "text": "Reiseliv Vg2",
        "url": "/nb/node/102780",
      },
      Object {
        "id": "37",
        "name": "Restaurant- og matfag Vg1",
        "nodeId": "37",
        "text": "Restaurant- og matfag Vg1",
        "url": "/nb/node/37",
      },
      Object {
        "id": "2600",
        "name": "Romteknologi Vg3",
        "nodeId": "2600",
        "text": "Romteknologi Vg3",
        "url": "/nb/node/2600",
      },
      Object {
        "id": "urn:subject:22",
        "name": "Salg, service og sikkerhet Vg2",
        "nodeId": "102781",
        "text": "Salg, service og sikkerhet Vg2",
        "url": "/subjects/subject:22",
      },
      Object {
        "id": "urn:subject:12",
        "name": "Service og samferdsel Vg1",
        "nodeId": "52291",
        "text": "Service og samferdsel Vg1",
        "url": "/subjects/subject:12",
      },
      Object {
        "id": "35",
        "name": "Teknikk og industriell produksjon Vg1",
        "nodeId": "35",
        "text": "Teknikk og industriell produksjon Vg1",
        "url": "/nb/node/35",
      },
      Object {
        "id": "102782",
        "name": "Transport og logistikk Vg2",
        "nodeId": "102782",
        "text": "Transport og logistikk Vg2",
        "url": "/nb/node/102782",
      },
    ],
  },
  Object {
    "name": "studiespesialiserende",
    "subjects": Array [
      Object {
        "id": "52234",
        "name": "Biologi 1",
        "nodeId": "52234",
        "text": "Biologi 1",
        "url": "/nb/node/52234",
      },
      Object {
        "id": "urn:subject:17",
        "lang": "en",
        "name": "Engelskspråklig litteratur og kultur",
        "nodeId": "71085",
        "text": "Engelskspråklig litteratur og kultur",
        "url": "/subjects/subject:17",
      },
      Object {
        "id": "urn:subject:27",
        "lang": "en",
        "name": "Internasjonal engelsk",
        "nodeId": "56850",
        "text": "Internasjonal engelsk",
        "url": "/subjects/subject:27",
      },
      Object {
        "id": "urn:subject:2",
        "name": "Kinesisk 1",
        "nodeId": "127756",
        "text": "Kinesisk 1",
        "url": "/subjects/subject:2",
      },
      Object {
        "id": "urn:subject:2",
        "name": "Kinesisk 2",
        "nodeId": "138654",
        "text": "Kinesisk 2",
        "url": "/subjects/subject:2",
      },
      Object {
        "id": "6118",
        "name": "Kommunikasjon og kultur 1",
        "nodeId": "6118",
        "text": "Kommunikasjon og kultur 1",
        "url": "/nb/node/6118",
      },
      Object {
        "id": "2602",
        "name": "Kommunikasjon og kultur 2",
        "nodeId": "2602",
        "text": "Kommunikasjon og kultur 2",
        "url": "/nb/node/2602",
      },
      Object {
        "id": "2603",
        "name": "Kommunikasjon og kultur 3",
        "nodeId": "2603",
        "text": "Kommunikasjon og kultur 3",
        "url": "/nb/node/2603",
      },
      Object {
        "id": "urn:subject:7",
        "name": "Markedsføring og ledelse 1",
        "nodeId": "52293",
        "text": "Markedsføring og ledelse 1",
        "url": "/subjects/subject:7",
      },
      Object {
        "id": "urn:subject:32",
        "name": "Matematikk R1",
        "nodeId": "57933",
        "text": "Matematikk R1",
        "url": "/subjects/subject:32",
      },
      Object {
        "id": "urn:subject:32",
        "name": "Matematikk R2",
        "nodeId": "98361",
        "text": "Matematikk R2",
        "url": "/subjects/subject:32",
      },
      Object {
        "id": "urn:subject:31",
        "name": "Matematikk S1",
        "nodeId": "57934",
        "text": "Matematikk S1",
        "url": "/subjects/subject:31",
      },
      Object {
        "id": "urn:subject:31",
        "name": "Matematikk S2",
        "nodeId": "98366",
        "text": "Matematikk S2",
        "url": "/subjects/subject:31",
      },
      Object {
        "id": "urn:subject:14",
        "name": "Medie- og informasjonskunnskap",
        "text": "Medie- og informasjonskunnskap",
        "url": "/subjects/subject:14",
      },
      Object {
        "beta": true,
        "id": "urn:subject:1",
        "name": "Medieuttrykk og mediesamfunnet",
        "nodeId": "156500",
        "text": "Medieuttrykk og mediesamfunnet",
        "url": "/subjects/subject:1",
      },
      Object {
        "id": "urn:subject:23",
        "lang": "en",
        "name": "Samfunnsfaglig engelsk",
        "nodeId": "71082",
        "text": "Samfunnsfaglig engelsk",
        "url": "/subjects/subject:23",
      },
      Object {
        "beta": true,
        "id": "185103",
        "name": "Sosiologi og sosialantropologi",
        "nodeId": "185103",
        "text": "Sosiologi og sosialantropologi",
        "url": "/nb/node/185103",
      },
      Object {
        "id": "urn:subject:8",
        "name": "Tysk 1",
        "nodeId": "137416",
        "text": "Tysk 1",
        "url": "/subjects/subject:8",
      },
      Object {
        "id": "urn:subject:8",
        "name": "Tysk 2",
        "nodeId": "138655",
        "text": "Tysk 2",
        "url": "/subjects/subject:8",
      },
    ],
  },
]
`;

exports[`mapHardCodedCategories with all old node subjects (en locale) 1`] = `
Array [
  Object {
    "name": "fellesfag",
    "subjects": Array [
      Object {
        "id": "42",
        "lang": "en",
        "name": "Engelsk",
        "nodeId": "42",
        "text": "Engelsk",
        "url": "/en/node/42",
      },
      Object {
        "id": "urn:subject:9",
        "name": "Historie Vg2 og Vg3",
        "nodeId": "52253",
        "text": "Historie Vg2 og Vg3",
        "url": "/subjects/subject:9",
      },
      Object {
        "id": "46",
        "name": "Kroppsøving",
        "nodeId": "46",
        "text": "Kroppsøving",
        "url": "/nb/node/46",
      },
      Object {
        "id": "urn:subject:34",
        "name": "Matematikk 1P",
        "nodeId": "55",
        "text": "Matematikk 1P",
        "url": "/subjects/subject:34",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 1P-Y",
        "text": "Matematikk 1P-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "urn:subject:33",
        "name": "Matematikk 1T",
        "nodeId": "54",
        "text": "Matematikk 1T",
        "url": "/subjects/subject:33",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 1T-Y",
        "text": "Matematikk 1T-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "urn:subject:29",
        "name": "Matematikk 2P",
        "nodeId": "53",
        "text": "Matematikk 2P",
        "url": "/subjects/subject:29",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 2P-Y",
        "text": "Matematikk 2P-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "7",
        "name": "Naturfag",
        "nodeId": "7",
        "text": "Naturfag",
        "url": "/nb/node/7",
      },
      Object {
        "id": "27",
        "name": "Norsk Vg2 og Vg3 SF",
        "nodeId": "27",
        "text": "Norsk Vg2 og Vg3 SF",
        "url": "/nb/node/27",
      },
      Object {
        "id": "116784",
        "name": "Norsk YF og SF",
        "nodeId": "116784",
        "text": "Norsk YF og SF",
        "url": "/nb/node/116784",
      },
      Object {
        "beta": true,
        "id": "185100",
        "name": "Religion og etikk",
        "nodeId": "185100",
        "text": "Religion og etikk",
        "url": "/nb/node/185100",
      },
      Object {
        "id": "urn:subject:3",
        "name": "Samfunnsfag",
        "nodeId": "36",
        "text": "Samfunnsfag",
        "url": "/subjects/subject:3",
      },
      Object {
        "beta": true,
        "id": "126960",
        "name": "Sørsamisk som førstespråk",
        "nodeId": "126960",
        "text": "Sørsamisk som førstespråk",
        "url": "/nb/node/126960",
      },
    ],
  },
  Object {
    "name": "yrkesfag",
    "subjects": Array [
      Object {
        "id": "51",
        "name": "Barne- og ungdomsarbeiderfag Vg2",
        "nodeId": "51",
        "text": "Barne- og ungdomsarbeiderfag Vg2",
        "url": "/nb/node/51",
      },
      Object {
        "id": "urn:subject:6",
        "name": "Brønnteknikk",
        "nodeId": "137414",
        "text": "Brønnteknikk",
        "url": "/subjects/subject:6",
      },
      Object {
        "id": "127013",
        "name": "Bygg- og anleggsteknikk Vg1",
        "nodeId": "127013",
        "text": "Bygg- og anleggsteknikk Vg1",
        "url": "/nb/node/127013",
      },
      Object {
        "id": "44",
        "name": "Design og håndverk Vg1",
        "nodeId": "44",
        "text": "Design og håndverk Vg1",
        "url": "/nb/node/44",
      },
      Object {
        "id": "43",
        "name": "Elektrofag Vg1",
        "nodeId": "43",
        "text": "Elektrofag Vg1",
        "url": "/nb/node/43",
      },
      Object {
        "id": "urn:subject:24",
        "name": "Helse- og oppvekstfag Vg1",
        "nodeId": "8",
        "text": "Helse- og oppvekstfag Vg1",
        "url": "/subjects/subject:24",
      },
      Object {
        "id": "urn:subject:4",
        "name": "Helsearbeiderfag Vg2",
        "nodeId": "52",
        "text": "Helsearbeiderfag Vg2",
        "url": "/subjects/subject:4",
      },
      Object {
        "id": "urn:subject:25",
        "name": "IKT-servicefag Vg2",
        "nodeId": "102783",
        "text": "IKT-servicefag Vg2",
        "url": "/subjects/subject:25",
      },
      Object {
        "id": "86643",
        "name": "Kokk- og servitørfag Vg2",
        "nodeId": "86643",
        "text": "Kokk- og servitørfag Vg2",
        "url": "/nb/node/86643",
      },
      Object {
        "id": "137415",
        "name": "Naturbruk Vg1",
        "nodeId": "137415",
        "text": "Naturbruk Vg1",
        "url": "/nb/node/137415",
      },
      Object {
        "id": "102780",
        "name": "Reiseliv Vg2",
        "nodeId": "102780",
        "text": "Reiseliv Vg2",
        "url": "/nb/node/102780",
      },
      Object {
        "id": "37",
        "name": "Restaurant- og matfag Vg1",
        "nodeId": "37",
        "text": "Restaurant- og matfag Vg1",
        "url": "/nb/node/37",
      },
      Object {
        "id": "2600",
        "name": "Romteknologi Vg3",
        "nodeId": "2600",
        "text": "Romteknologi Vg3",
        "url": "/nb/node/2600",
      },
      Object {
        "id": "urn:subject:22",
        "name": "Salg, service og sikkerhet Vg2",
        "nodeId": "102781",
        "text": "Salg, service og sikkerhet Vg2",
        "url": "/subjects/subject:22",
      },
      Object {
        "id": "urn:subject:12",
        "name": "Service og samferdsel Vg1",
        "nodeId": "52291",
        "text": "Service og samferdsel Vg1",
        "url": "/subjects/subject:12",
      },
      Object {
        "id": "35",
        "name": "Teknikk og industriell produksjon Vg1",
        "nodeId": "35",
        "text": "Teknikk og industriell produksjon Vg1",
        "url": "/nb/node/35",
      },
      Object {
        "id": "102782",
        "name": "Transport og logistikk Vg2",
        "nodeId": "102782",
        "text": "Transport og logistikk Vg2",
        "url": "/nb/node/102782",
      },
    ],
  },
  Object {
    "name": "studiespesialiserende",
    "subjects": Array [
      Object {
        "id": "52234",
        "name": "Biologi 1",
        "nodeId": "52234",
        "text": "Biologi 1",
        "url": "/nb/node/52234",
      },
      Object {
        "id": "urn:subject:17",
        "lang": "en",
        "name": "Engelskspråklig litteratur og kultur",
        "nodeId": "71085",
        "text": "Engelskspråklig litteratur og kultur",
        "url": "/subjects/subject:17",
      },
      Object {
        "id": "urn:subject:27",
        "lang": "en",
        "name": "Internasjonal engelsk",
        "nodeId": "56850",
        "text": "Internasjonal engelsk",
        "url": "/subjects/subject:27",
      },
      Object {
        "id": "urn:subject:2",
        "name": "Kinesisk 1",
        "nodeId": "127756",
        "text": "Kinesisk 1",
        "url": "/subjects/subject:2",
      },
      Object {
        "id": "urn:subject:2",
        "name": "Kinesisk 2",
        "nodeId": "138654",
        "text": "Kinesisk 2",
        "url": "/subjects/subject:2",
      },
      Object {
        "id": "6118",
        "name": "Kommunikasjon og kultur 1",
        "nodeId": "6118",
        "text": "Kommunikasjon og kultur 1",
        "url": "/nb/node/6118",
      },
      Object {
        "id": "2602",
        "name": "Kommunikasjon og kultur 2",
        "nodeId": "2602",
        "text": "Kommunikasjon og kultur 2",
        "url": "/nb/node/2602",
      },
      Object {
        "id": "2603",
        "name": "Kommunikasjon og kultur 3",
        "nodeId": "2603",
        "text": "Kommunikasjon og kultur 3",
        "url": "/nb/node/2603",
      },
      Object {
        "id": "urn:subject:7",
        "name": "Markedsføring og ledelse 1",
        "nodeId": "52293",
        "text": "Markedsføring og ledelse 1",
        "url": "/subjects/subject:7",
      },
      Object {
        "id": "urn:subject:32",
        "name": "Matematikk R1",
        "nodeId": "57933",
        "text": "Matematikk R1",
        "url": "/subjects/subject:32",
      },
      Object {
        "id": "urn:subject:32",
        "name": "Matematikk R2",
        "nodeId": "98361",
        "text": "Matematikk R2",
        "url": "/subjects/subject:32",
      },
      Object {
        "id": "urn:subject:31",
        "name": "Matematikk S1",
        "nodeId": "57934",
        "text": "Matematikk S1",
        "url": "/subjects/subject:31",
      },
      Object {
        "id": "urn:subject:31",
        "name": "Matematikk S2",
        "nodeId": "98366",
        "text": "Matematikk S2",
        "url": "/subjects/subject:31",
      },
      Object {
        "id": "urn:subject:14",
        "name": "Medie- og informasjonskunnskap",
        "text": "Medie- og informasjonskunnskap",
        "url": "/subjects/subject:14",
      },
      Object {
        "beta": true,
        "id": "urn:subject:1",
        "name": "Medieuttrykk og mediesamfunnet",
        "nodeId": "156500",
        "text": "Medieuttrykk og mediesamfunnet",
        "url": "/subjects/subject:1",
      },
      Object {
        "id": "urn:subject:23",
        "lang": "en",
        "name": "Samfunnsfaglig engelsk",
        "nodeId": "71082",
        "text": "Samfunnsfaglig engelsk",
        "url": "/subjects/subject:23",
      },
      Object {
        "beta": true,
        "id": "185103",
        "name": "Sosiologi og sosialantropologi",
        "nodeId": "185103",
        "text": "Sosiologi og sosialantropologi",
        "url": "/nb/node/185103",
      },
      Object {
        "id": "urn:subject:8",
        "name": "Tysk 1",
        "nodeId": "137416",
        "text": "Tysk 1",
        "url": "/subjects/subject:8",
      },
      Object {
        "id": "urn:subject:8",
        "name": "Tysk 2",
        "nodeId": "138655",
        "text": "Tysk 2",
        "url": "/subjects/subject:8",
      },
    ],
  },
]
`;

exports[`mapHardCodedCategories with all old node subjects (nb locale) 1`] = `
Array [
  Object {
    "name": "fellesfag",
    "subjects": Array [
      Object {
        "id": "42",
        "lang": "en",
        "name": "Engelsk",
        "nodeId": "42",
        "text": "Engelsk",
        "url": "/en/node/42",
      },
      Object {
        "id": "urn:subject:9",
        "name": "Historie Vg2 og Vg3",
        "nodeId": "52253",
        "text": "Historie Vg2 og Vg3",
        "url": "/subjects/subject:9",
      },
      Object {
        "id": "46",
        "name": "Kroppsøving",
        "nodeId": "46",
        "text": "Kroppsøving",
        "url": "/nb/node/46",
      },
      Object {
        "id": "urn:subject:34",
        "name": "Matematikk 1P",
        "nodeId": "55",
        "text": "Matematikk 1P",
        "url": "/subjects/subject:34",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 1P-Y",
        "text": "Matematikk 1P-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "urn:subject:33",
        "name": "Matematikk 1T",
        "nodeId": "54",
        "text": "Matematikk 1T",
        "url": "/subjects/subject:33",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 1T-Y",
        "text": "Matematikk 1T-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "urn:subject:29",
        "name": "Matematikk 2P",
        "nodeId": "53",
        "text": "Matematikk 2P",
        "url": "/subjects/subject:29",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 2P-Y",
        "text": "Matematikk 2P-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "7",
        "name": "Naturfag",
        "nodeId": "7",
        "text": "Naturfag",
        "url": "/nb/node/7",
      },
      Object {
        "id": "27",
        "name": "Norsk Vg2 og Vg3 SF",
        "nodeId": "27",
        "text": "Norsk Vg2 og Vg3 SF",
        "url": "/nb/node/27",
      },
      Object {
        "id": "116784",
        "name": "Norsk YF og SF",
        "nodeId": "116784",
        "text": "Norsk YF og SF",
        "url": "/nb/node/116784",
      },
      Object {
        "beta": true,
        "id": "185100",
        "name": "Religion og etikk",
        "nodeId": "185100",
        "text": "Religion og etikk",
        "url": "/nb/node/185100",
      },
      Object {
        "id": "urn:subject:3",
        "name": "Samfunnsfag",
        "nodeId": "36",
        "text": "Samfunnsfag",
        "url": "/subjects/subject:3",
      },
      Object {
        "beta": true,
        "id": "126960",
        "name": "Sørsamisk som førstespråk",
        "nodeId": "126960",
        "text": "Sørsamisk som førstespråk",
        "url": "/nb/node/126960",
      },
    ],
  },
  Object {
    "name": "yrkesfag",
    "subjects": Array [
      Object {
        "id": "51",
        "name": "Barne- og ungdomsarbeiderfag Vg2",
        "nodeId": "51",
        "text": "Barne- og ungdomsarbeiderfag Vg2",
        "url": "/nb/node/51",
      },
      Object {
        "id": "urn:subject:6",
        "name": "Brønnteknikk",
        "nodeId": "137414",
        "text": "Brønnteknikk",
        "url": "/subjects/subject:6",
      },
      Object {
        "id": "127013",
        "name": "Bygg- og anleggsteknikk Vg1",
        "nodeId": "127013",
        "text": "Bygg- og anleggsteknikk Vg1",
        "url": "/nb/node/127013",
      },
      Object {
        "id": "44",
        "name": "Design og håndverk Vg1",
        "nodeId": "44",
        "text": "Design og håndverk Vg1",
        "url": "/nb/node/44",
      },
      Object {
        "id": "43",
        "name": "Elektrofag Vg1",
        "nodeId": "43",
        "text": "Elektrofag Vg1",
        "url": "/nb/node/43",
      },
      Object {
        "id": "urn:subject:24",
        "name": "Helse- og oppvekstfag Vg1",
        "nodeId": "8",
        "text": "Helse- og oppvekstfag Vg1",
        "url": "/subjects/subject:24",
      },
      Object {
        "id": "urn:subject:4",
        "name": "Helsearbeiderfag Vg2",
        "nodeId": "52",
        "text": "Helsearbeiderfag Vg2",
        "url": "/subjects/subject:4",
      },
      Object {
        "id": "urn:subject:25",
        "name": "IKT-servicefag Vg2",
        "nodeId": "102783",
        "text": "IKT-servicefag Vg2",
        "url": "/subjects/subject:25",
      },
      Object {
        "id": "86643",
        "name": "Kokk- og servitørfag Vg2",
        "nodeId": "86643",
        "text": "Kokk- og servitørfag Vg2",
        "url": "/nb/node/86643",
      },
      Object {
        "id": "137415",
        "name": "Naturbruk Vg1",
        "nodeId": "137415",
        "text": "Naturbruk Vg1",
        "url": "/nb/node/137415",
      },
      Object {
        "id": "102780",
        "name": "Reiseliv Vg2",
        "nodeId": "102780",
        "text": "Reiseliv Vg2",
        "url": "/nb/node/102780",
      },
      Object {
        "id": "37",
        "name": "Restaurant- og matfag Vg1",
        "nodeId": "37",
        "text": "Restaurant- og matfag Vg1",
        "url": "/nb/node/37",
      },
      Object {
        "id": "2600",
        "name": "Romteknologi Vg3",
        "nodeId": "2600",
        "text": "Romteknologi Vg3",
        "url": "/nb/node/2600",
      },
      Object {
        "id": "urn:subject:22",
        "name": "Salg, service og sikkerhet Vg2",
        "nodeId": "102781",
        "text": "Salg, service og sikkerhet Vg2",
        "url": "/subjects/subject:22",
      },
      Object {
        "id": "urn:subject:12",
        "name": "Service og samferdsel Vg1",
        "nodeId": "52291",
        "text": "Service og samferdsel Vg1",
        "url": "/subjects/subject:12",
      },
      Object {
        "id": "35",
        "name": "Teknikk og industriell produksjon Vg1",
        "nodeId": "35",
        "text": "Teknikk og industriell produksjon Vg1",
        "url": "/nb/node/35",
      },
      Object {
        "id": "102782",
        "name": "Transport og logistikk Vg2",
        "nodeId": "102782",
        "text": "Transport og logistikk Vg2",
        "url": "/nb/node/102782",
      },
    ],
  },
  Object {
    "name": "studiespesialiserende",
    "subjects": Array [
      Object {
        "id": "52234",
        "name": "Biologi 1",
        "nodeId": "52234",
        "text": "Biologi 1",
        "url": "/nb/node/52234",
      },
      Object {
        "id": "urn:subject:17",
        "lang": "en",
        "name": "Engelskspråklig litteratur og kultur",
        "nodeId": "71085",
        "text": "Engelskspråklig litteratur og kultur",
        "url": "/subjects/subject:17",
      },
      Object {
        "id": "urn:subject:27",
        "lang": "en",
        "name": "Internasjonal engelsk",
        "nodeId": "56850",
        "text": "Internasjonal engelsk",
        "url": "/subjects/subject:27",
      },
      Object {
        "id": "urn:subject:2",
        "name": "Kinesisk 1",
        "nodeId": "127756",
        "text": "Kinesisk 1",
        "url": "/subjects/subject:2",
      },
      Object {
        "id": "urn:subject:2",
        "name": "Kinesisk 2",
        "nodeId": "138654",
        "text": "Kinesisk 2",
        "url": "/subjects/subject:2",
      },
      Object {
        "id": "6118",
        "name": "Kommunikasjon og kultur 1",
        "nodeId": "6118",
        "text": "Kommunikasjon og kultur 1",
        "url": "/nb/node/6118",
      },
      Object {
        "id": "2602",
        "name": "Kommunikasjon og kultur 2",
        "nodeId": "2602",
        "text": "Kommunikasjon og kultur 2",
        "url": "/nb/node/2602",
      },
      Object {
        "id": "2603",
        "name": "Kommunikasjon og kultur 3",
        "nodeId": "2603",
        "text": "Kommunikasjon og kultur 3",
        "url": "/nb/node/2603",
      },
      Object {
        "id": "urn:subject:7",
        "name": "Markedsføring og ledelse 1",
        "nodeId": "52293",
        "text": "Markedsføring og ledelse 1",
        "url": "/subjects/subject:7",
      },
      Object {
        "id": "urn:subject:32",
        "name": "Matematikk R1",
        "nodeId": "57933",
        "text": "Matematikk R1",
        "url": "/subjects/subject:32",
      },
      Object {
        "id": "urn:subject:32",
        "name": "Matematikk R2",
        "nodeId": "98361",
        "text": "Matematikk R2",
        "url": "/subjects/subject:32",
      },
      Object {
        "id": "urn:subject:31",
        "name": "Matematikk S1",
        "nodeId": "57934",
        "text": "Matematikk S1",
        "url": "/subjects/subject:31",
      },
      Object {
        "id": "urn:subject:31",
        "name": "Matematikk S2",
        "nodeId": "98366",
        "text": "Matematikk S2",
        "url": "/subjects/subject:31",
      },
      Object {
        "id": "urn:subject:14",
        "name": "Medie- og informasjonskunnskap",
        "text": "Medie- og informasjonskunnskap",
        "url": "/subjects/subject:14",
      },
      Object {
        "beta": true,
        "id": "urn:subject:1",
        "name": "Medieuttrykk og mediesamfunnet",
        "nodeId": "156500",
        "text": "Medieuttrykk og mediesamfunnet",
        "url": "/subjects/subject:1",
      },
      Object {
        "id": "urn:subject:23",
        "lang": "en",
        "name": "Samfunnsfaglig engelsk",
        "nodeId": "71082",
        "text": "Samfunnsfaglig engelsk",
        "url": "/subjects/subject:23",
      },
      Object {
        "beta": true,
        "id": "185103",
        "name": "Sosiologi og sosialantropologi",
        "nodeId": "185103",
        "text": "Sosiologi og sosialantropologi",
        "url": "/nb/node/185103",
      },
      Object {
        "id": "urn:subject:8",
        "name": "Tysk 1",
        "nodeId": "137416",
        "text": "Tysk 1",
        "url": "/subjects/subject:8",
      },
      Object {
        "id": "urn:subject:8",
        "name": "Tysk 2",
        "nodeId": "138655",
        "text": "Tysk 2",
        "url": "/subjects/subject:8",
      },
    ],
  },
]
`;

exports[`mapHardCodedCategories with all old node subjects (nn locale) 1`] = `
Array [
  Object {
    "name": "fellesfag",
    "subjects": Array [
      Object {
        "id": "42",
        "lang": "en",
        "name": "Engelsk",
        "nodeId": "42",
        "text": "Engelsk",
        "url": "/en/node/42",
      },
      Object {
        "id": "urn:subject:9",
        "name": "Historie Vg2 og Vg3",
        "nodeId": "52253",
        "text": "Historie Vg2 og Vg3",
        "url": "/subjects/subject:9",
      },
      Object {
        "id": "46",
        "name": "Kroppsøving",
        "nodeId": "46",
        "text": "Kroppsøving",
        "url": "/nn/node/46",
      },
      Object {
        "id": "urn:subject:34",
        "name": "Matematikk 1P",
        "nodeId": "55",
        "text": "Matematikk 1P",
        "url": "/subjects/subject:34",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 1P-Y",
        "text": "Matematikk 1P-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "urn:subject:33",
        "name": "Matematikk 1T",
        "nodeId": "54",
        "text": "Matematikk 1T",
        "url": "/subjects/subject:33",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 1T-Y",
        "text": "Matematikk 1T-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "urn:subject:29",
        "name": "Matematikk 2P",
        "nodeId": "53",
        "text": "Matematikk 2P",
        "url": "/subjects/subject:29",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 2P-Y",
        "text": "Matematikk 2P-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "7",
        "name": "Naturfag",
        "nodeId": "7",
        "text": "Naturfag",
        "url": "/nn/node/7",
      },
      Object {
        "id": "27",
        "name": "Norsk Vg2 og Vg3 SF",
        "nodeId": "27",
        "text": "Norsk Vg2 og Vg3 SF",
        "url": "/nn/node/27",
      },
      Object {
        "id": "116784",
        "name": "Norsk YF og SF",
        "nodeId": "116784",
        "text": "Norsk YF og SF",
        "url": "/nn/node/116784",
      },
      Object {
        "beta": true,
        "id": "185100",
        "name": "Religion og etikk",
        "nodeId": "185100",
        "text": "Religion og etikk",
        "url": "/nn/node/185100",
      },
      Object {
        "id": "urn:subject:3",
        "name": "Samfunnsfag",
        "nodeId": "36",
        "text": "Samfunnsfag",
        "url": "/subjects/subject:3",
      },
      Object {
        "beta": true,
        "id": "126960",
        "name": "Sørsamisk som førstespråk",
        "nodeId": "126960",
        "text": "Sørsamisk som førstespråk",
        "url": "/nn/node/126960",
      },
    ],
  },
  Object {
    "name": "yrkesfag",
    "subjects": Array [
      Object {
        "id": "51",
        "name": "Barne- og ungdomsarbeiderfag Vg2",
        "nodeId": "51",
        "text": "Barne- og ungdomsarbeiderfag Vg2",
        "url": "/nn/node/51",
      },
      Object {
        "id": "urn:subject:6",
        "name": "Brønnteknikk",
        "nodeId": "137414",
        "text": "Brønnteknikk",
        "url": "/subjects/subject:6",
      },
      Object {
        "id": "127013",
        "name": "Bygg- og anleggsteknikk Vg1",
        "nodeId": "127013",
        "text": "Bygg- og anleggsteknikk Vg1",
        "url": "/nn/node/127013",
      },
      Object {
        "id": "44",
        "name": "Design og håndverk Vg1",
        "nodeId": "44",
        "text": "Design og håndverk Vg1",
        "url": "/nn/node/44",
      },
      Object {
        "id": "43",
        "name": "Elektrofag Vg1",
        "nodeId": "43",
        "text": "Elektrofag Vg1",
        "url": "/nn/node/43",
      },
      Object {
        "id": "urn:subject:24",
        "name": "Helse- og oppvekstfag Vg1",
        "nodeId": "8",
        "text": "Helse- og oppvekstfag Vg1",
        "url": "/subjects/subject:24",
      },
      Object {
        "id": "urn:subject:4",
        "name": "Helsearbeiderfag Vg2",
        "nodeId": "52",
        "text": "Helsearbeiderfag Vg2",
        "url": "/subjects/subject:4",
      },
      Object {
        "id": "urn:subject:25",
        "name": "IKT-servicefag Vg2",
        "nodeId": "102783",
        "text": "IKT-servicefag Vg2",
        "url": "/subjects/subject:25",
      },
      Object {
        "id": "86643",
        "name": "Kokk- og servitørfag Vg2",
        "nodeId": "86643",
        "text": "Kokk- og servitørfag Vg2",
        "url": "/nn/node/86643",
      },
      Object {
        "id": "137415",
        "name": "Naturbruk Vg1",
        "nodeId": "137415",
        "text": "Naturbruk Vg1",
        "url": "/nn/node/137415",
      },
      Object {
        "id": "102780",
        "name": "Reiseliv Vg2",
        "nodeId": "102780",
        "text": "Reiseliv Vg2",
        "url": "/nn/node/102780",
      },
      Object {
        "id": "37",
        "name": "Restaurant- og matfag Vg1",
        "nodeId": "37",
        "text": "Restaurant- og matfag Vg1",
        "url": "/nn/node/37",
      },
      Object {
        "id": "2600",
        "name": "Romteknologi Vg3",
        "nodeId": "2600",
        "text": "Romteknologi Vg3",
        "url": "/nn/node/2600",
      },
      Object {
        "id": "urn:subject:22",
        "name": "Salg, service og sikkerhet Vg2",
        "nodeId": "102781",
        "text": "Salg, service og sikkerhet Vg2",
        "url": "/subjects/subject:22",
      },
      Object {
        "id": "urn:subject:12",
        "name": "Service og samferdsel Vg1",
        "nodeId": "52291",
        "text": "Service og samferdsel Vg1",
        "url": "/subjects/subject:12",
      },
      Object {
        "id": "35",
        "name": "Teknikk og industriell produksjon Vg1",
        "nodeId": "35",
        "text": "Teknikk og industriell produksjon Vg1",
        "url": "/nn/node/35",
      },
      Object {
        "id": "102782",
        "name": "Transport og logistikk Vg2",
        "nodeId": "102782",
        "text": "Transport og logistikk Vg2",
        "url": "/nn/node/102782",
      },
    ],
  },
  Object {
    "name": "studiespesialiserende",
    "subjects": Array [
      Object {
        "id": "52234",
        "name": "Biologi 1",
        "nodeId": "52234",
        "text": "Biologi 1",
        "url": "/nn/node/52234",
      },
      Object {
        "id": "urn:subject:17",
        "lang": "en",
        "name": "Engelskspråklig litteratur og kultur",
        "nodeId": "71085",
        "text": "Engelskspråklig litteratur og kultur",
        "url": "/subjects/subject:17",
      },
      Object {
        "id": "urn:subject:27",
        "lang": "en",
        "name": "Internasjonal engelsk",
        "nodeId": "56850",
        "text": "Internasjonal engelsk",
        "url": "/subjects/subject:27",
      },
      Object {
        "id": "urn:subject:2",
        "name": "Kinesisk 1",
        "nodeId": "127756",
        "text": "Kinesisk 1",
        "url": "/subjects/subject:2",
      },
      Object {
        "id": "urn:subject:2",
        "name": "Kinesisk 2",
        "nodeId": "138654",
        "text": "Kinesisk 2",
        "url": "/subjects/subject:2",
      },
      Object {
        "id": "6118",
        "name": "Kommunikasjon og kultur 1",
        "nodeId": "6118",
        "text": "Kommunikasjon og kultur 1",
        "url": "/nn/node/6118",
      },
      Object {
        "id": "2602",
        "name": "Kommunikasjon og kultur 2",
        "nodeId": "2602",
        "text": "Kommunikasjon og kultur 2",
        "url": "/nn/node/2602",
      },
      Object {
        "id": "2603",
        "name": "Kommunikasjon og kultur 3",
        "nodeId": "2603",
        "text": "Kommunikasjon og kultur 3",
        "url": "/nn/node/2603",
      },
      Object {
        "id": "urn:subject:7",
        "name": "Markedsføring og ledelse 1",
        "nodeId": "52293",
        "text": "Markedsføring og ledelse 1",
        "url": "/subjects/subject:7",
      },
      Object {
        "id": "urn:subject:32",
        "name": "Matematikk R1",
        "nodeId": "57933",
        "text": "Matematikk R1",
        "url": "/subjects/subject:32",
      },
      Object {
        "id": "urn:subject:32",
        "name": "Matematikk R2",
        "nodeId": "98361",
        "text": "Matematikk R2",
        "url": "/subjects/subject:32",
      },
      Object {
        "id": "urn:subject:31",
        "name": "Matematikk S1",
        "nodeId": "57934",
        "text": "Matematikk S1",
        "url": "/subjects/subject:31",
      },
      Object {
        "id": "urn:subject:31",
        "name": "Matematikk S2",
        "nodeId": "98366",
        "text": "Matematikk S2",
        "url": "/subjects/subject:31",
      },
      Object {
        "id": "urn:subject:14",
        "name": "Medie- og informasjonskunnskap",
        "text": "Medie- og informasjonskunnskap",
        "url": "/subjects/subject:14",
      },
      Object {
        "beta": true,
        "id": "urn:subject:1",
        "name": "Medieuttrykk og mediesamfunnet",
        "nodeId": "156500",
        "text": "Medieuttrykk og mediesamfunnet",
        "url": "/subjects/subject:1",
      },
      Object {
        "id": "urn:subject:23",
        "lang": "en",
        "name": "Samfunnsfaglig engelsk",
        "nodeId": "71082",
        "text": "Samfunnsfaglig engelsk",
        "url": "/subjects/subject:23",
      },
      Object {
        "beta": true,
        "id": "185103",
        "name": "Sosiologi og sosialantropologi",
        "nodeId": "185103",
        "text": "Sosiologi og sosialantropologi",
        "url": "/nn/node/185103",
      },
      Object {
        "id": "urn:subject:8",
        "name": "Tysk 1",
        "nodeId": "137416",
        "text": "Tysk 1",
        "url": "/subjects/subject:8",
      },
      Object {
        "id": "urn:subject:8",
        "name": "Tysk 2",
        "nodeId": "138655",
        "text": "Tysk 2",
        "url": "/subjects/subject:8",
      },
    ],
  },
]
`;

exports[`mapHardCodedCategories with some specialization subjects replaced 1`] = `
Array [
  Object {
    "name": "fellesfag",
    "subjects": Array [
      Object {
        "id": "42",
        "lang": "en",
        "name": "Engelsk",
        "nodeId": "42",
        "text": "Engelsk",
        "url": "/en/node/42",
      },
      Object {
        "id": "urn:subject:9",
        "name": "Historie Vg2 og Vg3",
        "nodeId": "52253",
        "text": "Historie Vg2 og Vg3",
        "url": "/subjects/subject:9",
      },
      Object {
        "id": "46",
        "name": "Kroppsøving",
        "nodeId": "46",
        "text": "Kroppsøving",
        "url": "/nb/node/46",
      },
      Object {
        "id": "urn:subject:34",
        "name": "Matematikk 1P",
        "nodeId": "55",
        "text": "Matematikk 1P",
        "url": "/subjects/subject:34",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 1P-Y",
        "text": "Matematikk 1P-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "urn:subject:33",
        "name": "Matematikk 1T",
        "nodeId": "54",
        "text": "Matematikk 1T",
        "url": "/subjects/subject:33",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 1T-Y",
        "text": "Matematikk 1T-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "urn:subject:29",
        "name": "Matematikk 2P",
        "nodeId": "53",
        "text": "Matematikk 2P",
        "url": "/subjects/subject:29",
      },
      Object {
        "id": "urn:subject:30",
        "name": "Matematikk 2P-Y",
        "text": "Matematikk 2P-Y",
        "url": "/subjects/subject:30",
      },
      Object {
        "id": "7",
        "name": "Naturfag",
        "nodeId": "7",
        "text": "Naturfag",
        "url": "/nb/node/7",
      },
      Object {
        "id": "27",
        "name": "Norsk Vg2 og Vg3 SF",
        "nodeId": "27",
        "text": "Norsk Vg2 og Vg3 SF",
        "url": "/nb/node/27",
      },
      Object {
        "id": "116784",
        "name": "Norsk YF og SF",
        "nodeId": "116784",
        "text": "Norsk YF og SF",
        "url": "/nb/node/116784",
      },
      Object {
        "beta": true,
        "id": "185100",
        "name": "Religion og etikk",
        "nodeId": "185100",
        "text": "Religion og etikk",
        "url": "/nb/node/185100",
      },
      Object {
        "id": "urn:subject:3",
        "name": "Samfunnsfag",
        "nodeId": "36",
        "text": "Samfunnsfag",
        "url": "/subjects/subject:3",
      },
      Object {
        "beta": true,
        "id": "126960",
        "name": "Sørsamisk som førstespråk",
        "nodeId": "126960",
        "text": "Sørsamisk som førstespråk",
        "url": "/nb/node/126960",
      },
    ],
  },
  Object {
    "name": "yrkesfag",
    "subjects": Array [
      Object {
        "id": "51",
        "name": "Barne- og ungdomsarbeiderfag Vg2",
        "nodeId": "51",
        "text": "Barne- og ungdomsarbeiderfag Vg2",
        "url": "/nb/node/51",
      },
      Object {
        "id": "urn:subject:6",
        "name": "Brønnteknikk",
        "nodeId": "137414",
        "text": "Brønnteknikk",
        "url": "/subjects/subject:6",
      },
      Object {
        "id": "127013",
        "name": "Bygg- og anleggsteknikk Vg1",
        "nodeId": "127013",
        "text": "Bygg- og anleggsteknikk Vg1",
        "url": "/nb/node/127013",
      },
      Object {
        "id": "44",
        "name": "Design og håndverk Vg1",
        "nodeId": "44",
        "text": "Design og håndverk Vg1",
        "url": "/nb/node/44",
      },
      Object {
        "id": "43",
        "name": "Elektrofag Vg1",
        "nodeId": "43",
        "text": "Elektrofag Vg1",
        "url": "/nb/node/43",
      },
      Object {
        "id": "urn:subject:24",
        "name": "Helse- og oppvekstfag Vg1",
        "nodeId": "8",
        "text": "Helse- og oppvekstfag Vg1",
        "url": "/subjects/subject:24",
      },
      Object {
        "id": "urn:subject:4",
        "name": "Helsearbeiderfag Vg2",
        "nodeId": "52",
        "text": "Helsearbeiderfag Vg2",
        "url": "/subjects/subject:4",
      },
      Object {
        "id": "urn:subject:25",
        "name": "IKT-servicefag Vg2",
        "nodeId": "102783",
        "text": "IKT-servicefag Vg2",
        "url": "/subjects/subject:25",
      },
      Object {
        "id": "86643",
        "name": "Kokk- og servitørfag Vg2",
        "nodeId": "86643",
        "text": "Kokk- og servitørfag Vg2",
        "url": "/nb/node/86643",
      },
      Object {
        "id": "137415",
        "name": "Naturbruk Vg1",
        "nodeId": "137415",
        "text": "Naturbruk Vg1",
        "url": "/nb/node/137415",
      },
      Object {
        "id": "102780",
        "name": "Reiseliv Vg2",
        "nodeId": "102780",
        "text": "Reiseliv Vg2",
        "url": "/nb/node/102780",
      },
      Object {
        "id": "37",
        "name": "Restaurant- og matfag Vg1",
        "nodeId": "37",
        "text": "Restaurant- og matfag Vg1",
        "url": "/nb/node/37",
      },
      Object {
        "id": "2600",
        "name": "Romteknologi Vg3",
        "nodeId": "2600",
        "text": "Romteknologi Vg3",
        "url": "/nb/node/2600",
      },
      Object {
        "id": "urn:subject:22",
        "name": "Salg, service og sikkerhet Vg2",
        "nodeId": "102781",
        "text": "Salg, service og sikkerhet Vg2",
        "url": "/subjects/subject:22",
      },
      Object {
        "id": "urn:subject:12",
        "name": "Service og samferdsel Vg1",
        "nodeId": "52291",
        "text": "Service og samferdsel Vg1",
        "url": "/subjects/subject:12",
      },
      Object {
        "id": "35",
        "name": "Teknikk og industriell produksjon Vg1",
        "nodeId": "35",
        "text": "Teknikk og industriell produksjon Vg1",
        "url": "/nb/node/35",
      },
      Object {
        "id": "102782",
        "name": "Transport og logistikk Vg2",
        "nodeId": "102782",
        "text": "Transport og logistikk Vg2",
        "url": "/nb/node/102782",
      },
    ],
  },
  Object {
    "name": "studiespesialiserende",
    "subjects": Array [
      Object {
        "id": "52234",
        "name": "Biologi 1",
        "nodeId": "52234",
        "text": "Biologi 1",
        "url": "/nb/node/52234",
      },
      Object {
        "id": "urn:subject:17",
        "lang": "en",
        "name": "Engelskspråklig litteratur og kultur",
        "nodeId": "71085",
        "text": "Engelskspråklig litteratur og kultur",
        "url": "/subjects/subject:17",
      },
      Object {
        "id": "urn:subject:27",
        "lang": "en",
        "name": "Internasjonal engelsk",
        "nodeId": "56850",
        "text": "Internasjonal engelsk",
        "url": "/subjects/subject:27",
      },
      Object {
        "id": "urn:subject:2",
        "name": "Kinesisk 1",
        "nodeId": "127756",
        "text": "Kinesisk 1",
        "url": "/subjects/subject:2?filters=urn:filter:1337",
      },
      Object {
        "id": "urn:subject:2",
        "name": "Kinesisk 2",
        "nodeId": "138654",
        "text": "Kinesisk 2",
        "url": "/subjects/subject:2?filters=urn:filter:42",
      },
      Object {
        "id": "6118",
        "name": "Kommunikasjon og kultur 1",
        "nodeId": "6118",
        "text": "Kommunikasjon og kultur 1",
        "url": "/nb/node/6118",
      },
      Object {
        "id": "2602",
        "name": "Kommunikasjon og kultur 2",
        "nodeId": "2602",
        "text": "Kommunikasjon og kultur 2",
        "url": "/nb/node/2602",
      },
      Object {
        "id": "2603",
        "name": "Kommunikasjon og kultur 3",
        "nodeId": "2603",
        "text": "Kommunikasjon og kultur 3",
        "url": "/nb/node/2603",
      },
      Object {
        "id": "urn:subject:7",
        "name": "Markedsføring og ledelse 1",
        "nodeId": "52293",
        "text": "Markedsføring og ledelse 1",
        "url": "/subjects/subject:7",
      },
      Object {
        "id": "urn:subject:32",
        "name": "Matematikk R1",
        "nodeId": "57933",
        "text": "Matematikk R1",
        "url": "/subjects/subject:32",
      },
      Object {
        "id": "urn:subject:32",
        "name": "Matematikk R2",
        "nodeId": "98361",
        "text": "Matematikk R2",
        "url": "/subjects/subject:32",
      },
      Object {
        "id": "urn:subject:31",
        "name": "Matematikk S1",
        "nodeId": "57934",
        "text": "Matematikk S1",
        "url": "/subjects/subject:31",
      },
      Object {
        "id": "urn:subject:31",
        "name": "Matematikk S2",
        "nodeId": "98366",
        "text": "Matematikk S2",
        "url": "/subjects/subject:31",
      },
      Object {
        "id": "urn:subject:14",
        "name": "Medie- og informasjonskunnskap",
        "text": "Medie- og informasjonskunnskap",
        "url": "/subjects/subject:14",
      },
      Object {
        "beta": true,
        "id": "urn:subject:1",
        "name": "Medieuttrykk og mediesamfunnet",
        "nodeId": "156500",
        "text": "Medieuttrykk og mediesamfunnet",
        "url": "/subjects/subject:1",
      },
      Object {
        "id": "urn:subject:23",
        "lang": "en",
        "name": "Samfunnsfaglig engelsk",
        "nodeId": "71082",
        "text": "Samfunnsfaglig engelsk",
        "url": "/subjects/subject:23",
      },
      Object {
        "beta": true,
        "id": "185103",
        "name": "Sosiologi og sosialantropologi",
        "nodeId": "185103",
        "text": "Sosiologi og sosialantropologi",
        "url": "/nb/node/185103",
      },
      Object {
        "id": "urn:subject:8",
        "name": "Tysk 1",
        "nodeId": "137416",
        "text": "Tysk 1",
        "url": "/subjects/subject:8",
      },
      Object {
        "id": "urn:subject:8",
        "name": "Tysk 2",
        "nodeId": "138655",
        "text": "Tysk 2",
        "url": "/subjects/subject:8",
      },
    ],
  },
]
`;
